# rust-prometheus

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  rustfmt.toml
.github/workflows/: rust.yml
benches/: atomic.rs  bench.rs  benches.rs  counter.rs  desc.rs  gauge.rs  histogram.rs  text_encoder.rs  vec.rs
benches/metrics/: mod.rs
demo/: simple.rs
example/: example_embed.rs  example_hyper.rs  simple_example.rs
examples/: counter_vec.rs  embed.rs  example_custom_registry.rs  example_edition_2018.rs  example_embed.rs  example_hyper.rs  example_hyper.rs.bk  example_int_metrics.rs  example_process_collector.rs  example_push.rs  example_warp.rs  hyper.rs  int_metrics.rs  process_collector.rs  push.rs  readme_basic.rs  readme_vec.rs
proto/: gogo.rs  io.prometheus.client.rs  metrics.proto  metrics.rs  mod.rs  proto_model.proto  proto_model.rs  wrapper_io.prometheus.client.rs
src/: atomic.rs  atomic64.rs  atomic64.rs.bk  atomicf64.rs  auto_flush.rs  collector.rs  convert.rs  counter.rs  desc.rs  desc.rs.bk  descriptor.rs  encoder.rs  error.rs  errors.rs  exemplars.rs  gauge.rs  histogram.rs  histogram.rs.bk  http.rs  label.rs  lib.rs  local.rs  macros.rs  mapvec.rs  maximum_over_interval_gauge.rs  metrics.rs  no_proto.rs  nohash.rs  plain_model.rs  process_collector.rs  proto.rs  proto_ext.rs  pulling_gauge.rs  push.rs  registry.rs  registry.rs.bk  timer.rs  untyped.rs  util.rs  value.rs  (+2 more)
src/atomic64/: atomic.rs  fallback.rs  mod.rs  nightly.rs  rwlock.rs
src/counter/: counter.rs  local_counter.rs  local_counter_primitive.rs  mod.rs
src/encoder/: mod.rs  pb.rs  text.rs
static-metric/: CHANGELOG.md  Cargo.toml  Makefile  README.md
static-metric/benches/: benches.rs
static-metric/examples/: advanced.rs  auto_flush_local.rs  auto_flush_local_multi_layer.rs  auto_flush_local_multi_layer_histo.rs  local.rs  make_auto_flush_static_counter.rs  make_auto_flush_static_metric.rs  make_auto_flush_static_metric_histo.rs  make_auto_flush_static_metric_histogram.rs  metric_enum.rs  register_integration.rs  simple.rs  with_lazy_static.rs  with_once_cell.rs
static-metric/proc-macros/: Cargo.toml
static-metric/proc-macros/src/: auto_flush_builder.rs  auto_flush_from.rs  lib.rs
static-metric/src/: auto_flush_builder.rs  auto_flush_from.rs  builder.rs  lib.rs  parser.rs  register_macro.rs  util.rs
static-metric/tests/: label_enum.rs  metric.rs
