[package]
authors = ["overvenus@gmail.com", "siddontang@gmail.com", "vistaswx@gmail.com"]
description = "Prometheus instrumentation library for Rust applications."
documentation = "https://docs.rs/prometheus"
edition = "2018"
homepage = "https://github.com/tikv/rust-prometheus"
keywords = ["prometheus", "metrics"]
license = "Apache-2.0"
name = "prometheus"
readme = "README.md"
repository = "https://github.com/tikv/rust-prometheus"
version = "0.10.0"

[badges]
travis-ci = { repository = "pingcap/rust-prometheus" }

[package.metadata.docs.rs]
features = ["nightly"]

[features]
default = ["protobuf"]
gen = ["protobuf-codegen-pure"]
nightly = ["libc"]
process = ["libc", "procfs"]
push = ["reqwest", "libc", "protobuf"]

[dependencies]
cfg-if = "^0.1"
fnv = "^1.0"
lazy_static = "^1.4"
libc = { version = "^0.2", optional = true }
parking_lot = "^0.11"
protobuf = { version = "^2.0", optional = true }
regex = "^1.3"
reqwest = { version = "^0.10", features = ["blocking"], optional = true }
thiserror = "^1.0"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "^0.8", optional = true, default-features = false }

[dev-dependencies]
getopts = "^0.2"
hyper = "^0.13"
tokio = { version = "^0.3", features = ["macros"] }

[build-dependencies]
protobuf-codegen-pure = { version = "^2.0", optional = true }

[workspace]
members = ["static-metric"]
