[package]
# When releasing to crates.io:
# - Remove path dependencies.
# - Update CHANGELOG.md.
name = "prometheus-static-metric"
version = "0.4.0"
license = "Apache-2.0"
authors = ["me@breeswish.org"]
description = "Static metric helper utilities for rust-prometheus."
repository = "https://github.com/tikv/rust-prometheus"
homepage = "https://github.com/tikv/rust-prometheus"
documentation = "https://docs.rs/prometheus-static-metric"
include = [
    "LICENSE",
    "Cargo.toml",
    "src/**/*.rs",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"
lazy_static = "1.4"

[dev-dependencies]
prometheus = { version = "0.9", path = "../" }

[features]
default = []
