[package]
name = "prometheus-static-metric"
version = "0.5.1"
license = "Apache-2.0"
authors = ["me@breeswish.org"]
description = "Static metric helper utilities for rust-prometheus."
repository = "https://github.com/tikv/rust-prometheus"
homepage = "https://github.com/tikv/rust-prometheus"
documentation = "https://docs.rs/prometheus-static-metric"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.4"
prometheus = { path = "../" }

[features]
default = []

[[bench]]
name = "benches"
harness = false
